ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/rtl.css
.heading, .module-heading, a, p, .dataset-list, .search-form, h1,
#dataset-resources, .additional-info, .tags, td.dataset-details, th.dataset-label,
.context-info, .flash-messages, .page_primary_action, .breadcrumb
{
    direction: rtl;
    text-align: right;
}

.search-form .search-input.search-giant button {
    margin-top: -15px;
    left: 15px;
}

.context-info .nums dl, .toolbar .breadcrumb {
    float: right;
}

.resource-item .btn-group {
    left: 10px;
    right: auto;
}

.resource-item .format-label {
    left: auto;
    right: 10px;
}

.resource-item {
    padding: 10px 60px 10px 10px;
}

